--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "generator-jhipster",
+    "name": "generator-jhipster-mkl",
     "version": "6.4.1",
     "description": "Spring Boot + Angular/React in one handy generator",
     "files": [
@@ -33,7 +33,7 @@
     },
     "repository": {
         "type": "git",
-        "url": "git://github.com/jhipster/generator-jhipster.git"
+        "url": "git://github.com/mpina83/generator-jhipster.git"
     },
     "scripts": {
         "prettier:format": "prettier --write \"{,**/}*.{js,json,md,yml}\"",
